[package]
name = "angry-dragon-fire"
version = "0.0.1"
authors = ["daxpryce@microsoft.com"]
edition = "2018"
license = "MIT"
description = "Example python library used to test current Rust, Pyo3, and Maturin build best-practices."
readme = "README.md"

[package.metadata.maturin]
maintainer = "Dax Pryce"
maintainer-email = "daxpryce@microsoft.com"
requires-python = ">=3.6,<3.11"
project-url = {"Github" = "https://github.com/daxpryce/angry-dragon-fire"}
classifier = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9"]

[lib]
name = "angry_dragon_fire"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "abi3-py36"]
